--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Rarchita12/Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "inquirer": "^8.1.0",
     "mysql2": "^2.2.5",
